# stoltzmaniac

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  codecov.yml  conf.py  index.rst  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
_build/html/_static/: jquery-3.4.1.js
src/stoltzmaniac/data_handler/: __init__.py  base.py  clean_data.py  scale_data.py  test_train_split_data.py
src/stoltzmaniac/models/: __init__.py
src/stoltzmaniac/utils/: accuracy_metrics.py  base.py  cost_functions.py  distance_functions.py  learners.py
stoltzmaniac/data_handler/: base.py  basedata.py  clean_data.py  converter.py  data.py  scale_data.py  test_train_split_data.py  utils.py
stoltzmaniac/models/supervised/: linear_regression.py
stoltzmaniac/utils/: check_types.py  convert.py
tests/: conftest.py  test_example.py  test_stoltzmaniac.py
tests/data/: highly_correlated.csv  loosely_correlated.csv  my_test_data_strings.csv
tests/test_data_handler/: test_base.py  test_clean_data.py  test_converter.py  test_data.py  test_label_decoder.py  test_label_encoder.py  test_scale_data.py  test_scaler.py  test_splitter.py  test_test_train_split_data.py
tests/test_models/test_supervised/: test_k_nearest_neighbors.py  test_linear_regression.py
tests/test_utils/: test_check_expected_type.py  test_convert.py  test_distance_functions.py
(+2 files in other folders)
