[tool.poetry]
name = "stoltzmaniac"
version = "0.1.2"
description = ""
authors = ["Scott Stoltzman <info@stoltzmanconsulting.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
pytest-cov = "^2.8.1"
sphinx = "^2.4.4"
coverage = "^5.0.4"
pytest-xdist = "^1.31.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
