[tool.poetry]
name = "stoltzmaniac"
version = "0.1.0"
description = "A lightweight library for basic machine learning tasks."
authors = ["stoltzmaniac <scott@stoltzmaniac.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.4"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
numpy = "^1.18.4"
pandas = "^1.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
