[tool.poetry]
name = "stoltzmaniac"
version = "0.1.4"
description = "A lightweight library for basic machine learning tasks."
readme = "README.md"
repository = "https://github.com/stoltzmaniac/stoltzmaniac"
keywords = ["stoltzmaniac"]
authors = ["stoltzmaniac <scott@stoltzmaniac.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.4"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
numpy = "^1.18.4"
pandas = "^1.0.4"
pytest = "^5.4.3"
pytest-cov = "^2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
